syntax = "proto3";
package sec09;



option java_package = "com.grpc.models.sec09";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}

message WithDrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}


service BankService{
  //unary send request and receive a response
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  //server streaming send a request and receive multiple response
  rpc WithDraw(WithDrawRequest) returns(stream Money);


}

